use sse with zustand

--- a/assets/package.json
+++ b/assets/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "^2.1.3",
     "react-tabulator": "^0.18.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "zustand": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
